--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -156,6 +156,7 @@ jobs:
         with:
           node-version: 16.15.0
           cache: 'yarn'
+          cache-dependency-path: './${{ inputs.frontendRepo }}/yarn.lock'
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
