--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -154,13 +154,13 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         uses: actions/setup-node@v2
         with:
-          node-version: 16.15.0
           cache: 'yarn'
           cache-dependency-path: './${{ inputs.frontendRepo }}/yarn.lock'
+          node-version-file: './${{ inputs.frontendRepo }}/.nvmrc'
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: pwd && ls && yarn install && yarn add serve
+        run: yarn install && yarn add serve
         working-directory: ./${{ inputs.frontendRepo }}
         env:
           REACT_APP_ENV: ${{ inputs.frontendEnvironment }}
