--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -150,7 +150,7 @@ jobs:
           path: ${{ inputs.frontendRepo }}
           token: ${{ secrets.token }}
 
-      - name: Use Node.js 16.15.0
+      - name: Use Node.js
         if: steps.cache.outputs.cache-hit != 'true'
         uses: actions/setup-node@v2
         with:
