--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -428,6 +428,11 @@ jobs:
       - name: Start frontend
         run: yarn serve -s build -l 3000 & npx wait-on http://localhost:3000
         working-directory: ./${{ inputs.frontendRepo }}
+        
+      - name: Change node version to 12.18.0
+        uses: actions/setup-node@v2
+        with:
+          node-version: 12.18.0
 
       # Install dependencies and run all Cypress tests
       - name: Cypress run
