--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -85,15 +85,17 @@ jobs:
           path: ${{ inputs.backendMentoringRepo }}
           token: ${{ secrets.token }}
 
-      - name: Use Node.js 12.16.1
+      - name: Use Node.js
         if: steps.cache.outputs.cache-hit != 'true'
         uses: actions/setup-node@v2
         with:
-          node-version: 12.16.1
+          cache: 'yarn'
+          cache-dependency-path: './${{ inputs.backendMentoringRepo }}/yarn.lock'
+          node-version-file: './${{ inputs.backendMentoringRepo }}/.nvmrc'
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: npm install yarn && yarn install
+        run: yarn install
         working-directory: ./${{ inputs.backendMentoringRepo }}
 
       - name: Set cache
@@ -345,11 +347,6 @@ jobs:
       organizationId: ${{ steps.create_org_for_tests.outputs.organizationId }}
 
     steps:
-      - name: Use Node.js 12.16.1
-        uses: actions/setup-node@v2
-        with:
-          node-version: 12.16.1
-
       - name: Set up Python 3.7.5
         uses: actions/setup-python@v2
         with:
@@ -399,6 +396,11 @@ jobs:
         with:
           path: ~/.cache/Cypress
           key: ${{ inputs.e2eTestsRepo }}-dependencies-${{needs.e2e-tests-prepare.outputs.commit}}
+
+      - name: Use backend Node.js version
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: './${{ inputs.backendMentoringRepo }}/.nvmrc'
 
       - name: Start ${{ inputs.backendPairingRepo }}
         run: make start & npx wait-on http://localhost:9000/pairing/_release
@@ -484,10 +486,10 @@ jobs:
           service_account_key: ${{ secrets.gcp }}
           export_default_credentials: true
 
-      - name: Use Node.js 12.16.1
+      - name: Use Mentoring Service Node.js Version
         uses: actions/setup-node@v2
         with:
-          node-version: 12.16.1
+          node-version-file: './${{ inputs.backendMentoringRepo }}/.nvmrc'
 
       - name: Delete org created for testing
         run: yarn babel-node --extensions ".ts,.js" lib/scripts/deleteDemoOrg/deleteDemoOrg.js ${{needs.start-servers-and-tests.outputs.organizationId}}
