wip: use correct path

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -436,7 +436,7 @@ jobs:
       - name: Change to e2e node version
         uses: actions/setup-node@v2
         with:
-          node-version-file: './${{ inputs.backendMentoringRepo }}/.nvmrc'
+          node-version-file: './${{ inputs.e2eTestsRepo }}/.nvmrc'
 
       # Install dependencies and run all Cypress tests
       - name: Cypress run
