--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -304,7 +304,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         uses: actions/setup-node@v2
         with:
-          node-version-file: './${{ inputs.e2eTestsRepo }}/.nvmrc'
+          node-version-file: '../${{ inputs.e2eTestsRepo }}/.nvmrc'
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
