alexey/debug: adding a package to wait for service to start

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -400,22 +400,18 @@ jobs:
           key: ${{ inputs.e2eTestsRepo }}-dependencies-${{needs.e2e-tests-prepare.outputs.commit}}
 
       - name: Start ${{ inputs.backendPairingRepo }}
-        run: make start & echo 'Success'
+        run: make start & echo 'Starting service'
         working-directory: ./${{ inputs.backendPairingRepo }}
         env:
           TOGETHER_ENVIRONMENT: ${{ inputs.backendEnvironment }}
 
-      - name: Sleep + Curl command for ${{ inputs.backendPairingRepo }}
-        run: sleep 10 && curl http://localhost:9000/pairing/_release && curl http://0.0.0.0:9000/pairing/_release && curl http://127.0.0.1:9000/pairing/_release
-        working-directory: ./${{ inputs.backendPairingRepo }}
-        env:
-          TOGETHER_ENVIRONMENT: ${{ inputs.backendEnvironment }}
-
-      - name: Wait-on ${{ inputs.backendPairingRepo }}
-        run: npx wait-on http://localhost:9000/pairing/_release
-        working-directory: ./${{ inputs.backendPairingRepo }}
-        env:
-          TOGETHER_ENVIRONMENT: ${{ inputs.backendEnvironment }}
+      - name: Wait for ${{ inputs.backendPairingRepo }}
+        uses: nev7n/wait_for_response@v1
+        with:
+          url: 'http://localhost:9000/pairing/_release'
+          responseCode: 200
+          timeout: 10000
+          interval: 500
 
       - name: Use backend Node.js version
         uses: actions/setup-node@v2
