--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -461,19 +461,19 @@ jobs:
 
 
       # Sets node version to mentoring-service node version in order to run endpoint tests
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          cache: 'yarn'
-          cache-dependency-path: './${{ inputs.backendMentoringRepo }}/yarn.lock'
-          node-version-file: './${{ inputs.backendMentoringRepo }}/.nvmrc'
+      # - name: Use Node.js
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     cache: 'yarn'
+      #     cache-dependency-path: './${{ inputs.backendMentoringRepo }}/yarn.lock'
+      #     node-version-file: './${{ inputs.backendMentoringRepo }}/.nvmrc'
 
       # run endpoint tests
-      - name: Run mentoring-service endpoint tests on ${{ inputs.backendMentoringRepo }}
-        run: yarn test:integration
-        working-directory: ./${{ inputs.backendMentoringRepo }}
-        env:
-          TOGETHER_ENVIRONMENT: ${{ inputs.backendEnvironment }}
+      # - name: Run mentoring-service endpoint tests on ${{ inputs.backendMentoringRepo }}
+      #   run: yarn test:integration
+      #   working-directory: ./${{ inputs.backendMentoringRepo }}
+      #   env:
+      #     TOGETHER_ENVIRONMENT: ${{ inputs.backendEnvironment }}
 
       # after the test run completes
       # store videos and any screenshots
